# og

./: README.md  pyproject.toml
.github/workflows/: ci.yml
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
examples/: basic_usage.py  custom_observer.py
misc/docs/: aw.py.md  creek.py.md  dol.py.md  ef.py.md  i2.py.md  instructions_for_light_weight_activity_tracking.md  meshed.py.md
og/: __init__.py  ai.py  base.py  code_quality.py  config.py  context.py  cross_project.py  daemon.py  export.py  focus_mode.py  insights.py  learning.py  meetings.py  mood.py  patterns.py  privacy.py  proactive.py  query.py  registry.py  scheduling.py  semantic.py  setup.py  standup.py  storage.py  switching_cost.py  tasks.py  team.py  timesheet.py  voice.py  web.py
og/observers/: __init__.py  apps.py  browser.py  calendar.py  email.py  filesystem.py  git.py  github.py  ide.py  keyboard.py  music.py  slack.py  terminal.py
tests/: test_config.py  test_context.py  test_focus_mode.py  test_learning.py  test_meetings.py  test_mood.py  test_patterns.py  test_privacy.py  test_proactive.py  test_scheduling.py  test_semantic.py  test_standup.py  test_switching_cost.py  test_tasks.py  test_timesheet.py  test_voice.py
